# shader-cross

./: .gitignore  CMakeLists.txt  README.md
cmd/: main.cpp
include/shader_cross/: shader_cross.h  shader_cross.hpp
shaderx/: CMakeLists.txt  shaderx.cpp
src/: glsl_spirv.cpp  spirv.cpp  spirv.hpp  spirv_glsl.cpp  spirv_hlsl.cpp  spirv_msl.cpp
tests/: CMakeLists.txt  glsl_tests.cpp
